--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 			}
 
 			svg {
-				max-width: 400px;
-				max-height: 400px;
+				max-width: 100%;
+				width: 400px;
 				float: right;
 			}
 
