--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" type="image/png" href="./favicon.png" />
 		<title>Задачи с ответами</title>
 		<style type="text/css">
 			@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
