--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<a href="#4" onclick="setCurrentPage(this)">Электротехника (ТОЭ)</a>
 		</div>
 		<div id="problems"></div>
-		<a href="https://github.com/midnightcoder-pro/vse-zadachi">Поставь звёздочку за старания)</a>
+		<a href="https://github.com/mytecor/vse-zadachi">Поставь звёздочку за старания)</a>
 		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 		<script type="text/javascript">
 			if(!location.hash) location.hash = '#1'
